@@ -32,6 +32,9 @@ import java.util.List;
 import qupath.lib.color.ColorDeconvolutionStains;
 import qupath.lib.images.servers.ColorTransforms.ColorTransform;
 import qupath.lib.images.servers.RotatedImageServer.Rotation;
+import qupath.lib.images.servers.transforms.BufferedImageNormalizer;
+import qupath.lib.images.servers.transforms.ColorDeconvolutionNormalizer;
+import qupath.lib.images.servers.transforms.SubtractOffsetAndScaleNormalizer;
 import qupath.lib.regions.ImageRegion;
 
 /**
@@ -40,7 +43,6 @@ import qupath.lib.regions.ImageRegion;
  * Note: This is an early-stage experimental class, which may well change!
  * 
  * @author Pete Bankhead
- *
  */
 public class TransformedServerBuilder {
 	
@@ -55,20 +57,54 @@ public class TransformedServerBuilder {
 	}
 	
 	/**
-	 * Crop an specified region based on a bounding box.
-	 * @param region
-	 * @return
+	 * Crop a specified region based on a bounding box.
+	 *
+	 * @param region the region to crop
+	 * @return this builder
 	 */
 	public TransformedServerBuilder crop(ImageRegion region) {
 		server = new CroppedImageServer(server, region);
+		return this;
+	}
+
+	/**
+	 * Slice a specific region along the z or the t axis.
+	 *
+	 * @param zStart the inclusive 0-based index of the first slice to consider
+	 * @param zEnd the exclusive 0-based index of the last slide to consider
+	 * @param tStart the inclusive 0-based index of the first timepoint to consider
+	 * @param tEnd the exclusive 0-based index of the last timepoint to consider
+	 * @return this builder
+	 * @throws IllegalArgumentException when a start index is greater than its corresponding end index
+	 */
+	public TransformedServerBuilder slice(int zStart, int zEnd, int tStart, int tEnd) {
+		return slice(zStart, zEnd, 1, tStart, tEnd, 1);
+	}
+
+	/**
+	 * Slice a specific region along the z or the t axis with a step.
+	 *
+	 * @param zStart the inclusive 0-based index of the first slice to consider
+	 * @param zEnd the exclusive 0-based index of the last slide to consider
+	 * @param zStep a step to indicate which slides to consider
+	 * @param tStart the inclusive 0-based index of the first timepoint to consider
+	 * @param tEnd the exclusive 0-based index of the last timepoint to consider
+	 * @param tStep a step to indicate which timepoints to consider
+	 * @return this builder
+	 * @throws IllegalArgumentException when a start index is greater than its corresponding end index,
+	 * or when a step is less than or equal to 0
+	 */
+	public TransformedServerBuilder slice(int zStart, int zEnd, int zStep, int tStart, int tEnd, int tStep) {
+		server = new SlicedImageServer(server, zStart, zEnd, zStep, tStart, tEnd, tStep);
 		return this;
 	}
 	
 	/**
 	 * Apply an {@link AffineTransform} to the server. 
 	 * Note that the transform must be invertible, otherwise and {@link IllegalArgumentException} will be thrown.
-	 * @param transform
-	 * @return
+	 *
+	 * @param transform the transform to apply to the image
+	 * @return this builder
 	 */
 	public TransformedServerBuilder transform(AffineTransform transform) {
 		try {
@@ -80,10 +116,11 @@ public class TransformedServerBuilder {
 	}
 	
 	/**
-	 * Apply color deconvolution to the brightfield image, so that deconvolved stains behave as separate channels/
+	 * Apply color deconvolution to the brightfield image, so that deconvolved stains behave as separate channels.
+	 *
 	 * @param stains the stains to apply for color deconvolution
 	 * @param stainNumbers the indices of the stains that should be use (an array compressing values that are 1, 2 or 3); if not specified, all 3 stains will be used.
-	 * @return
+	 * @return this builder
 	 */
 	public TransformedServerBuilder deconvolveStains(ColorDeconvolutionStains stains, int...stainNumbers) {
 		server = new ColorDeconvolutionImageServer(server, stains, stainNumbers);
@@ -93,8 +130,9 @@ public class TransformedServerBuilder {
 	/**
 	 * Rearrange the channel order of an RGB image.
 	 * This is intended for cases where an image has wrongly been interpreted as RGB or BGR.
-	 * @param order
-	 * @return
+	 *
+	 * @param order a text containing the letters R, G, and B in any order
+	 * @return this builder
 	 */
 	public TransformedServerBuilder reorderRGB(String order) {
 		server = new RearrangeRGBImageServer(server, order);
@@ -103,8 +141,9 @@ public class TransformedServerBuilder {
 	
 	/**
 	 * Rotate the image, using an increment of 90 degrees.
-	 * @param rotation
-	 * @return
+	 *
+	 * @param rotation the rotation to apply
+	 * @return this image
 	 */
 	public TransformedServerBuilder rotate(Rotation rotation) {
 		server = new RotatedImageServer(server, rotation);
@@ -113,8 +152,9 @@ public class TransformedServerBuilder {
 	
 	/**
 	 * Extract specified channels for an image.
+	 *
 	 * @param channels indices (0-based) of channels to extract.
-	 * @return
+	 * @return this builder
 	 */
 	public TransformedServerBuilder extractChannels(int... channels) {
 		var transforms = new ArrayList<ColorTransform>();
@@ -127,8 +167,9 @@ public class TransformedServerBuilder {
 	
 	/**
 	 * Extract specified channels for an image.
+	 *
 	 * @param names names of channels to extract.
-	 * @return
+	 * @return this builder
 	 */
 	public TransformedServerBuilder extractChannels(String... names) {
 		var transforms = new ArrayList<ColorTransform>();
@@ -141,48 +182,42 @@ public class TransformedServerBuilder {
 	
 	/**
 	 * Perform a maximum projection of the channels.
-	 * @return
+	 *
+	 * @return this builder
 	 */
 	public TransformedServerBuilder maxChannelProject() {
-		server = new ChannelTransformFeatureServer(server, 
-				Arrays.asList(ColorTransforms.createMaximumChannelTransform()));
+		server = new ChannelTransformFeatureServer(server, List.of(ColorTransforms.createMaximumChannelTransform()));
 		return this;
 	}
 	
 	/**
 	 * Perform an average (mean) projection of the channels.
-	 * @return
+	 *
+	 * @return this builder
 	 */
 	public TransformedServerBuilder averageChannelProject() {
-		server = new ChannelTransformFeatureServer(server, 
-				Arrays.asList(ColorTransforms.createMeanChannelTransform()));
+		server = new ChannelTransformFeatureServer(server, List.of(ColorTransforms.createMeanChannelTransform()));
 		return this;
 	}
 	
 	/**
 	 * Perform a minimum projection of the channels.
-	 * @return
+	 *
+	 * @return this builder
 	 */
 	public TransformedServerBuilder minChannelProject() {
-		server = new ChannelTransformFeatureServer(server, 
-				Arrays.asList(ColorTransforms.createMinimumChannelTransform()));
+		server = new ChannelTransformFeatureServer(server, List.of(ColorTransforms.createMinimumChannelTransform()));
 		return this;
 	}
 	
 	/**
 	 * Concatenate a collection of additional servers along the 'channels' dimension (iteration order is used).
-	 * @param additionalChannels additional servers that will be applied as channels; note that these should be 
-	 * 								of an appropriate type and dimension for concatenation.
-	 * @return
+	 *
+	 * @param additionalChannels additional servers that will be applied as channels; note that these should be
+	 *                           of an appropriate type and dimension for concatenation.
+	 * @return this builder
 	 */
 	public TransformedServerBuilder concatChannels(Collection<ImageServer<BufferedImage>> additionalChannels) {
-//		// Try to avoid wrapping more than necessary
-//		if (server instanceof ConcatChannelsImageServer) {
-//			var temp = new ArrayList<>(((ConcatChannelsImageServer)server).getAllServers());
-//			temp.addAll(additionalChannels);
-//			server = new ConcatChannelsImageServer(((ConcatChannelsImageServer)server).getWrappedServer(), temp);
-//		} else
-		
 		List<ImageServer<BufferedImage>> allChannels = new ArrayList<>(additionalChannels);
 		// Make sure that the current server is included
 		if (!allChannels.contains(server))
@@ -193,9 +228,10 @@ public class TransformedServerBuilder {
 	
 	/**
 	 * Concatenate additional servers along the 'channels' dimension.
-	 * @param additionalChannels additional servers from which channels will be added; note that the servers should be 
-	 * 								of an appropriate type and dimension for concatenation.
-	 * @return
+	 *
+	 * @param additionalChannels additional servers from which channels will be added; note that the servers should be
+	 *                           of an appropriate type and dimension for concatenation.
+	 * @return this builder
 	 */
 	public TransformedServerBuilder concatChannels(ImageServer<BufferedImage>... additionalChannels) {
 		for (var temp : additionalChannels) {
@@ -204,20 +240,112 @@ public class TransformedServerBuilder {
 		}
 		return concatChannels(Arrays.asList(additionalChannels));
 	}
-	
-//	/**
-//	 * Concatenate additional server along the 'channels' dimension.
-//	 * @param additionalChannel additional server from which channels will be added; note that the server should be 
-//	 * 								of an appropriate type and dimension for concatenation.
-//	 * @return
-//	 */
-//	public TransformedServerBuilder concatChannel(ImageServer<BufferedImage> additionalChannel) {
-//		return concatChannels(Arrays.asList(additionalChannel));
-//	}
+
+	/**
+	 * Subtract a constant offset from all channels, without clipping.
+	 * @param offsets a single offset to subtract from all channels, or an array of offsets to subtract from each channel.
+	 * @return
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder subtractOffset(double... offsets) {
+		return normalize(SubtractOffsetAndScaleNormalizer.createSubtractOffset(offsets));
+	}
+
+	/**
+	 * Subtract a constant offset from all channels, clipping the result to be &geq; 0.
+	 * @param offsets a single offset to subtract from all channels, or an array of offsets to subtract from each channel.
+	 * @return
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder subtractOffsetAndClipZero(double... offsets) {
+		return normalize(SubtractOffsetAndScaleNormalizer.createSubtractOffsetAndClipZero(offsets));
+	}
+
+	/**
+	 * Subtract a constant offset from all channels, then multiply the result by a scale factor.
+	 * @param offsets a single offset to subtract from all channels, or an array of offsets to subtract from each channel.
+	 * @param scales a single scale factor to apply to all channels, or an array of scale factors to apply to each channel.
+	 * @return
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder subtractOffsetAndScale(double[] offsets, double[] scales) {
+		return normalize(SubtractOffsetAndScaleNormalizer.create(offsets, scales));
+	}
+
+	/**
+	 * Scale all channels by a constant factor.
+	 * @param scales a single scale factor to apply to all channels, or an array of scale factors to apply to each channel.
+	 * @return
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder scaleChannels(double... scales) {
+		return normalize(SubtractOffsetAndScaleNormalizer.create(null, scales));
+	}
+
+	/**
+	 * Normalize stains using color deconvolution and reconvolution.
+	 * @param stainsInput stain vectors to apply to deconvolve the input image, which should relate to the original colors
+	 * @param stainsOutput stain vectors to apply for reconvolution, determining the output colors
+	 * @param scales optional array of scale factors to apply to each deconvolved channel.
+	 *               A scale factor of 1.0 will leave the channel unchanged, while a scale of 0.0 will suppress the channel.
+	 * @return
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder stainNormalize(ColorDeconvolutionStains stainsInput, ColorDeconvolutionStains stainsOutput, double... scales) {
+		return normalize(ColorDeconvolutionNormalizer.create(stainsInput, stainsOutput, scales));
+	}
+
+	/**
+	 * Normalize the image using the provided normalizer.
+	 * @param normalizer
+	 * @return
+	 * @ImplNote To use this method to create an image that can be added to a project, the normalizers must be JSON-serializable
+	 *           and registered under {@link ImageServers#getNormalizerFactory()}.
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder normalize(BufferedImageNormalizer normalizer) {
+		this.server = new NormalizedImageServer(server, normalizer);
+		return this;
+	}
+
+	/**
+	 * Apply color transforms to the image.
+	 *
+	 * @param transforms the transforms to apply
+	 * @return this builder
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder applyColorTransforms(Collection<? extends ColorTransform> transforms) {
+		server = new ChannelTransformFeatureServer(server, new ArrayList<>(transforms));
+		return this;
+	}
+
+	/**
+	 * Apply color transforms to the image.
+	 *
+	 * @param transforms the transforms to apply
+	 * @return this builder
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder applyColorTransforms(ColorTransform... transforms) {
+		return applyColorTransforms(Arrays.asList(transforms));
+	}
+
+	/**
+	 * Convert to the specified pixel type.
+	 *
+	 * @param pixelType the target pixel type
+	 * @return this builder
+	 * @since v0.6.0
+	 */
+	public TransformedServerBuilder convertType(PixelType pixelType) {
+		server = new TypeConvertImageServer(server, pixelType);
+		return this;
+	}
+
 	
 	/**
-	 * Get the {@link ImageServer} that applies all the requested transforms.
-	 * @return
+	 * Get the {@link ImageServer} that applies the requested transforms sequentially.
 	 */
 	public ImageServer<BufferedImage> build() {
 		return server;
