@@ -22,12 +22,14 @@
 package qupath.lib.roi;
 
 import java.awt.Shape;
+import java.awt.Rectangle;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.Area;
 import java.awt.geom.GeneralPath;
 import java.awt.geom.Path2D;
 import java.awt.geom.PathIterator;
 import java.awt.geom.Point2D;
+import java.awt.geom.Rectangle2D;
 import java.text.NumberFormat;
 import java.text.ParseException;
 import java.util.ArrayList;
@@ -39,6 +41,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.StringTokenizer;
 import java.util.function.Function;
 import org.locationtech.jts.algorithm.locate.SimplePointInAreaLocator;
@@ -72,8 +75,8 @@ import org.locationtech.jts.geom.util.LineStringExtracter;
 import org.locationtech.jts.geom.util.PolygonExtracter;
 import org.locationtech.jts.index.quadtree.Quadtree;
 import org.locationtech.jts.operation.overlay.snap.GeometrySnapper;
+import org.locationtech.jts.operation.overlayng.UnaryUnionNG;
 import org.locationtech.jts.operation.polygonize.Polygonizer;
-import org.locationtech.jts.operation.union.UnaryUnionOp;
 import org.locationtech.jts.operation.valid.IsValidOp;
 import org.locationtech.jts.operation.valid.TopologyValidationError;
 import org.locationtech.jts.precision.GeometryPrecisionReducer;
@@ -95,7 +98,7 @@ import qupath.lib.roi.interfaces.ROI;
  */
 public class GeometryTools {
 	
-	private static Logger logger = LoggerFactory.getLogger(GeometryTools.class);
+	private static final Logger logger = LoggerFactory.getLogger(GeometryTools.class);
 	
 	private static final GeometryFactory DEFAULT_FACTORY = new GeometryFactory(
 			new PrecisionModel(100.0),
@@ -104,7 +107,7 @@ public class GeometryTools {
 
 	private static final PrecisionModel INTEGER_PRECISION_MODEL = new PrecisionModel(1);
     
-    private static GeometryConverter DEFAULT_INSTANCE = new GeometryConverter.Builder()
+    private static final GeometryConverter DEFAULT_INSTANCE = new GeometryConverter.Builder()
     		.build();
     
     /**
@@ -179,37 +182,14 @@ public class GeometryTools {
      * @return
      */
     public static Geometry shapeToGeometry(Shape shape) {
-//    	System.err.println("Shape area: " + new ClosedShapeStatistics(shape).getArea());
-    	var geometry = DEFAULT_INSTANCE.shapeToGeometry(shape);
-//    	System.err.println("Geometry area: " + geometry.getArea());
-    	return geometry;
-//    	return ShapeReader.read(shape, DEFAULT_INSTANCE.flatness, DEFAULT_INSTANCE.factory);
+    	return DEFAULT_INSTANCE.shapeToGeometry(shape);
     }
-    
-    
-//    /**
-//	 * Round coordinates in a Geometry to integer values, and constrain to the specified bounding box.
-//	 * @param geometry
-//     * @param minX 
-//     * @param minY 
-//     * @param maxX 
-//     * @param maxY 
-//     * @return 
-//	 */
-//	protected Geometry roundAndConstrain(Geometry geometry, double minX, double minY, double maxX, double maxY) {
-//		geometry = GeometryPrecisionReducer.reduce(geometry, new PrecisionModel(1));
-//		geometry = TopologyPreservingSimplifier.simplify(geometry, 0.0);
-//		geometry = geometry.intersection(GeometryTools.createRectangle(minX, minY, maxX-minX, maxY-minY));
-//		return geometry;
-////		roundingFilter.setBounds(minX, minY, maxX, maxY);
-////		geometry.apply(roundingFilter);
-////		return VWSimplifier.simplify(geometry, 0.5);
-//	}
+
 	
 	
     /**
      * Convert an {@link Envelope} to an {@link ImageRegion}.
-     * @param env envelop
+     * @param env envelope
      * @param z z index for the region (default is 0)
      * @param t timepoint for the region (default is 0)
      * @return the smallest {@link ImageRegion} that contains the specified envelop
@@ -220,6 +200,34 @@ public class GeometryTools {
 		int width = (int)Math.ceil(env.getMaxX()) - x;
 		int height = (int)Math.ceil(env.getMaxY()) - y;
 		return ImageRegion.createInstance(x, y, width, height, z, t);
+	}
+
+	/**
+	 * Convert an {@link ImageRegion} to an {@link Envelope}.
+	 * This will lose z and t information.
+	 * @param region the region
+=	 * @return the smallest {@link Envelope} that contains the specified region
+	 */
+	public static Envelope regionToEnvelope(ImageRegion region) {
+		return new Envelope(
+				region.getMinX(), region.getMaxX(), region.getMinY(), region.getMaxY()
+		);
+	}
+
+	/**
+	 * Convert the bounding box of a {@link ROI} to an {@link Envelope}.
+	 * This will lose z and t information.
+	 * @param roi the ROI
+	 * @return the smallest {@link Envelope} that contains the specified ROI.
+	 *         Note that this does not involve any use of a precision model.
+	 */
+	public static Envelope roiToEnvelope(ROI roi) {
+		return new Envelope(
+				roi.getBoundsX(),
+				roi.getBoundsX() + roi.getBoundsWidth(),
+				roi.getBoundsY(),
+				roi.getBoundsY() + roi.getBoundsHeight()
+		);
 	}
 	
 	
@@ -282,7 +290,7 @@ public class GeometryTools {
      * @param height
      * @return
      */
-    public static Geometry createRectangle(double x, double y, double width, double height) {
+    public static Polygon createRectangle(double x, double y, double width, double height) {
     	var shapeFactory = new GeometricShapeFactory(DEFAULT_FACTORY);
     	shapeFactory.setNumPoints(4); // Probably 5, but should be increased automatically
 		shapeFactory.setEnvelope(
@@ -291,6 +299,32 @@ public class GeometryTools {
 				);
 		return shapeFactory.createRectangle();
     }
+
+
+	/**
+	 * Create a line Geometry for the specified end points.
+	 * @param x1
+	 * @param y1
+	 * @param x2
+	 * @param y2
+	 * @return
+	 * @since v0.6.0
+	 */
+	public static LineString createLineString(double x1, double y1, double x2, double y2) {
+		return createLineString(new Point2(x1, y1), new Point2(x2, y2));
+	}
+
+	/**
+	 * Create a line Geometry for the specified array of points.
+	 * @param points
+	 * @return
+	 * @since v0.6.0
+	 */
+	public static LineString createLineString(Point2... points) {
+		return getDefaultFactory().createLineString(
+				Arrays.stream(points).map(p -> new Coordinate(p.getX(), p.getY())).toArray(Coordinate[]::new)
+		);
+	}
     
     
     /**
@@ -336,50 +370,42 @@ public class GeometryTools {
     	coords[4] = coords[0];
     	return DEFAULT_INSTANCE.factory.createPolygon(coords);
     }
-    
-    
-    /**
+
+	/**
+	 * Calculate the union of multiple Geometry objects.
+	 * @param geometries
+	 * @return
+	 * @since v0.6.0
+	 */
+	public static Geometry union(Geometry... geometries) {
+		return union(Arrays.asList(geometries));
+	}
+
+	/**
      * Calculate the union of multiple Geometry objects.
      * @param geometries
      * @return
+	 * @implNote since v0.6.0 this uses {@link FastPolygonUnion} for merging polygons.
      */
     public static Geometry union(Collection<? extends Geometry> geometries) {
-    	return union(geometries, false);
-    }
-    
-    
-    /**
-     * Calculate the union of multiple Geometry objects.
-     * @param geometries
-     * @param fastUnion if true, it can be assumed that the Geometries are valid and cannot overlap. This may permit a faster union operation.
-     * @return
-     */
-    private static Geometry union(Collection<? extends Geometry> geometries, boolean fastUnion) {
     	if (geometries.isEmpty())
-    		return DEFAULT_INSTANCE.factory.createPolygon();
+    		return getDefaultFactory().createPolygon();
     	if (geometries.size() == 1)
     		return geometries.iterator().next();
-    	if (fastUnion) {
-    		double areaSum = geometries.stream().mapToDouble(g -> g.getArea()).sum();
-    		var union = DEFAULT_INSTANCE.factory.buildGeometry(geometries).buffer(0);
-    		double areaUnion = union.getArea();
-    		if (GeneralTools.almostTheSame(areaSum, areaUnion, 0.00001)) {
-    			return union;
-    		}
-    		logger.warn("Fast union failed with different areas ({} before vs {} after)", areaSum, areaUnion);
-    	}
-    	try {
-    		return UnaryUnionOp.union(geometries);
-    	} catch (Exception e) {
-    		// Throw exception if we have no other options
-    		if (fastUnion)
-    			throw e;
-    		else {
-    			// Try again with other path
-    			logger.warn("Exception attempting default union: {}", e.getLocalizedMessage());
-    			return union(geometries, true);
-    		}
-    	}
+		try {
+			if (geometries.size() > 2 || geometries.stream().allMatch(g -> g instanceof Polygonal)) {
+				// If we have multiple polygonal geometries, do things the 'fast' way
+				// (which may admittedly be slightly slower in some cases, but orders of magnitude faster in others)
+				return FastPolygonUnion.union(geometries);
+			} else {
+				// Standard union operation
+				logger.trace("Calling UnaryUnionNG for {} geometries", geometries.size());
+				return UnaryUnionNG.union(new ArrayList<>(geometries), getDefaultFactory().getPrecisionModel());
+			}
+		} catch (Exception e) {
+			logger.warn("Geometry union failed - attempting with buffer(0)", e);
+			return getDefaultFactory().buildGeometry(geometries).buffer(0);
+		}
     }
     
     /**
@@ -530,10 +556,6 @@ public class GeometryTools {
         				iter.remove();
         				break;
         			}
-//        			if (PointLocation.isInRing(small.getInteriorPoint().getCoordinate(), ring.getCoordinates())) {
-//        				iter.remove();
-//        				break;
-//        			}
         		}
     		}
     	}
@@ -619,6 +641,42 @@ public class GeometryTools {
     	return GeometryTools.union(filtered);
 //    	return geometry.getFactory().buildGeometry(filtered);
     }
+
+	/**
+	 * Find the polygon with the largest area in a Geometry.
+	 * <p>
+	 * If the input is a polygon, then it is returned unchanged.
+	 * <p>
+	 * Otherwise, polygons are extracted and the one with the largest area is returned -
+	 * or the first encountered polygon with the largest area in the case of a tie.
+	 * <p>
+	 * If no polygons are found, then the method returns null.
+	 * @param geometry
+	 * @return
+	 */
+	public static Polygon findLargestPolygon(Geometry geometry) {
+		if (geometry instanceof Polygon)
+			return (Polygon)geometry;
+		var polygons = flatten(geometry, null)
+				.stream()
+				.filter(g -> g instanceof Polygon)
+				.map(g -> (Polygon)g)
+				.toList();
+		if (polygons.isEmpty())
+			return null;
+		else if (polygons.size() == 1)
+			return polygons.get(0);
+		double maxArea = polygons.get(0).getArea();
+		int maxInd = 0;
+		for (int i = 1; i < polygons.size(); i++) {
+			double area = polygons.get(i).getArea();
+			if (area > maxArea) {
+				maxArea = area;
+				maxInd = i;
+			}
+		}
+		return polygons.get(maxInd);
+	}
     
     /**
      * Remove fragments smaller than the specified area from a Geometry, ignoring internal rings.
@@ -671,7 +729,7 @@ public class GeometryTools {
     	if (error == null)
     		return polygon;
     	
-		logger.debug("Invalid polygon detected! Attempting to correct {}", error.toString());
+		logger.debug("Invalid polygon detected! Attempting to correct {}", error);
 		
 		// Area calculations seem to be reliable... even if the topology is invalid
 		double areaBefore = polygon.getArea();
@@ -691,7 +749,7 @@ public class GeometryTools {
 				if (geomDifference.isValid())
 					return geomDifference;
 			} catch (Exception e) {
-				logger.debug("Attempting to fix by difference failed: " + e.getLocalizedMessage(), e);
+				logger.debug("Attempting to fix by difference failed: {}", e.getMessage(), e);
 			}
 		}
 		
@@ -803,10 +861,10 @@ public class GeometryTools {
      */
     public static class GeometryConverter {
     	
-        private GeometryFactory factory;
+        private final GeometryFactory factory;
 
-        private double pixelHeight, pixelWidth;
-        private double flatness = 0.1;
+        private final double pixelHeight, pixelWidth;
+        private final double flatness;
 
         private AffineTransform transform = null;
         private Transformer transformer;
@@ -839,15 +897,20 @@ public class GeometryTools {
 	     * 
 	     * @param roi
 	     * @return
+		 * @implNote since v0.6.0 this returns a normalized geometry.
 	     */
 	    public Geometry roiToGeometry(ROI roi) {
+			Geometry geom = null;
 	    	if (roi.isPoint())
-	    		return pointsToGeometry(roi);
+				geom = pointsToGeometry(roi);
 	    	if (roi.isArea())
-	    		return areaToGeometry(roi);
+				geom = areaToGeometry(roi);
 	    	if (roi.isLine())
-	    		return lineToGeometry(roi);
-	    	throw new UnsupportedOperationException("Unknown ROI " + roi + " - cannot convert to a Geometry!");
+				geom = lineToGeometry(roi);
+			if (geom == null)
+		    	throw new UnsupportedOperationException("Unknown ROI " + roi + " - cannot convert to a Geometry!");
+			else
+				return geom.norm();
 	    }
 	    
 	    private Geometry lineToGeometry(ROI roi) {
@@ -895,21 +958,28 @@ public class GeometryTools {
 	    			return shapeFactory.createRectangle();
 	    		}
 	    	}
-	    	// TODO: Test if this is as reliable
-	    	// Exploratory code for v0.4.0, but rejected to reduce risk.
-	    	// Seems marginally faster, but not by a huge amount
+            // TODO: Test if this is as reliable
+            // Update August 2024... it is not. Tests added to TestGeometryTools show it
+            // fails faster for complex (random) polygons than the old method, which
+            // converts via a java.awt.geom.Area.
+            //
+            // Exploratory code for v0.4.0, but rejected to reduce risk.
+            // Seems marginally faster, but not by a huge amount
 //	    	if (roi instanceof PolygonROI) {
 //		    	PrecisionModel precisionModel = factory.getPrecisionModel();
 //		    	Polygonizer polygonizer = new Polygonizer(true);
 //		    	List<Coordinate> coords = new ArrayList<>();
+//				Coordinate lastCoord = null;
 //		    	for (var p : roi.getAllPoints()) {
 //		    		var c = new Coordinate(p.getX(), p.getY());
 //		    		precisionModel.makePrecise(c);
-//		    		coords.add(c);
+//					if (!Objects.equals(lastCoord, c))
+//			    		coords.add(c);
+//					lastCoord = c;
 //		    	}
 //		    	// Close if needed
-//		    	if (!coords.get(0).equals(coords.get(coords.size()-1)))
-//		    		coords.add(coords.get(0).copy());
+//		    	if (!coords.getFirst().equals(coords.getLast()))
+//		    		coords.add(coords.getFirst().copy());
 //	    		LineString lineString = factory.createLineString(coords.toArray(Coordinate[]::new));
 //		    	polygonizer.add(lineString.union());
 //		    	return polygonizer.getGeometry();
@@ -947,18 +1017,7 @@ public class GeometryTools {
 	    }
 	    
 	    private Geometry areaToGeometry(Area shape) {
-//	    	Geometry geometry = null;
-//	    	if (shape.isSingular()) {
-//	        	PathIterator iterator = shape.getPathIterator(transform, flatness);
-//	        	geometry = getShapeReader().read(iterator);
-//	    	} else {
 	    	return convertAreaToGeometry(shape, transform, flatness, factory);
-//	    	}
-	    	// Use simplifier to ensure a valid geometry
-//	    	var error = new IsValidOp(geometry).getValidationError();
-//	    	System.err.println(geometry.getArea());
-////	    	geometry = GeometrySnapper.snapToSelf(geometry, GeometryS, cleanResult)
-//	    	return VWSimplifier.simplify(geometry, 0);    		
 	    }
 	    
 	    
@@ -995,7 +1054,8 @@ public class GeometryTools {
 	    		LineString lineString = factory.createLineString(array);
 	    		geometries.add(lineString);
 	    	}
-	    	polygonizer.add(factory.buildGeometry(geometries).union());
+			var geom = factory.buildGeometry(geometries).union();
+	    	polygonizer.add(geom);
 	    	return polygonizer.getGeometry();
 
 	    }
@@ -1074,7 +1134,7 @@ public class GeometryTools {
 				default:
 					// Shouldn't happen because of flattened PathIterator
 					throw new RuntimeException("Invalid area computation!");
-				};
+				}
 				areaTempSigned += 0.5 * (x0 * y1 - x1 * y0);
 				// Add polygon if it has just been closed
 				if (closed && points.size() == 1) {
@@ -1156,19 +1216,19 @@ public class GeometryTools {
 			Geometry geometryOuter;
 			if (holes.isEmpty()) {
 				// If we have no holes, just use the outer geometry
-				geometryOuter = union(outer, true);
+				geometryOuter = union(outer);
 				geometry = geometryOuter;
 			} else if (outer.size() == 1) {
 				// If we just have one outer geometry, remove all the holes
-				geometryOuter = union(outer, true);
-				geometry = geometryOuter.difference(union(holes, true));
+				geometryOuter = union(outer);
+				geometry = geometryOuter.difference(union(holes));
 			} else {
 				// We need to handle holes... and, in particular, additional objects that may be nested within holes.
 				// To do that, we iterate through the holes and try to match these with the containing polygon, updating it accordingly.
 				// By doing this in order we should find the 'correct' containing polygon.
 				var ascendingArea = Comparator.comparingDouble((GeometryWithArea g) -> g.area);
-				var outerWithArea = outer.stream().map(g -> new GeometryWithArea(g)).sorted(ascendingArea).toList();
-				var holesWithArea = holes.stream().map(g -> new GeometryWithArea(g)).sorted(ascendingArea).toList();
+				var outerWithArea = outer.stream().map(GeometryWithArea::new).sorted(ascendingArea).toList();
+				var holesWithArea = holes.stream().map(GeometryWithArea::new).sorted(ascendingArea).toList();
 				
 				// For each hole, find the smallest polygon that contains it
 				Map<Geometry, List<Geometry>> matches = new HashMap<>();
@@ -1254,32 +1314,27 @@ public class GeometryTools {
 	
 	    private ShapeWriter getShapeWriter() {
 	    	return new ShapeWriter(transformer);
-//	        if (shapeWriter == null)
-//	            shapeWriter = new ShapeWriter(new Transformer());
-//	        return shapeWriter;
 	    }
 	
-	
-	//    private CoordinateSequence toCoordinates(PolygonROI roi) {
-	//        CoordinateList list = new CoordinateList();
-	//        for (Point2 p : roi.getPolygonPoints())
-	//            list.add(new Coordinate(p.getX() * pixelWidth, p.getY() * pixelHeight));
-	//        return new CoordinateArraySequence(list.toCoordinateArray());
-	//    }
+
 	
 	    private Shape geometryToShape(Geometry geometry) {
 	        var shape = getShapeWriter().toShape(geometry);
-	        // JTS Shapes can have some odd behavior (e.g. lack of contains method), so convert to Area if that is a suitable match
+	        // JTS Shapes can have some odd behavior (e.g. lack of contains method).
+			// Previously we converted to Area, but this could have terrible (unusable) performance for
+			// large and complex shapes - so instead we wrap and implement the missing methods
+			// using the geometry directly.
 	        if (geometry instanceof Polygonal && shape instanceof GeometryCollectionShape)
-	        	return new Area(shape);
+				return new GeometryShapeWrapper(geometry, shape);
 	        return shape;
 	    }
-	
-	    private ROI geometryToROI(Geometry geometry, ImagePlane plane) {
+
+
+		private ROI geometryToROI(Geometry geometry, ImagePlane plane) {
 	    	if (geometry.isEmpty())
 	    		return ROIs.createEmptyROI(plane);
 	    	
-	    	// Make sure out Geometry is all of the same type
+	    	// Make sure our Geometry is all of the same type
 	    	var geometry2 = homogenizeGeometryCollection(geometry);
 	    	if (geometry2 != geometry) {
 	    		logger.warn("Geometries must all be of the same type when converting to a ROI! Converted {} to {}.", geometry.getGeometryType(), geometry2.getGeometryType());
@@ -1375,4 +1430,71 @@ public class GeometryTools {
     }
 
 
+	/**
+	 * Wrapper for a JTS Shape.
+	 * This implements missing methods based on the original geometry,
+	 * to avoid unexpected exceptions when using the shape.
+	 */
+	private static class GeometryShapeWrapper implements Shape {
+
+		private final Shape shape;
+		private final Geometry geometry;
+
+		private GeometryShapeWrapper(Geometry geom, Shape shape) {
+			this.geometry = geom.copy();
+			this.shape = shape;
+		}
+
+		@Override
+		public Rectangle getBounds() {
+			return shape.getBounds();
+		}
+
+		@Override
+		public Rectangle2D getBounds2D() {
+			return shape.getBounds2D();
+		}
+
+		@Override
+		public boolean contains(double x, double y) {
+			return SimplePointInAreaLocator.isContained(new Coordinate(x, y), geometry);
+		}
+
+		@Override
+		public boolean contains(Point2D p) {
+			return contains(p.getX(), p.getY());
+		}
+
+		@Override
+		public boolean intersects(double x, double y, double w, double h) {
+			return geometry.intersects(
+					GeometryTools.createRectangle(x, y, w, h)
+			);
+		}
+
+		@Override
+		public boolean intersects(Rectangle2D r) {
+			return intersects(r.getX(), r.getY(), r.getWidth(), r.getHeight());
+		}
+
+		@Override
+		public boolean contains(double x, double y, double w, double h) {
+			return false;
+		}
+
+		@Override
+		public boolean contains(Rectangle2D r) {
+			return false;
+		}
+
+		@Override
+		public PathIterator getPathIterator(AffineTransform at) {
+			return shape.getPathIterator(at);
+		}
+
+		@Override
+		public PathIterator getPathIterator(AffineTransform at, double flatness) {
+			return shape.getPathIterator(at, flatness);
+		}
+	}
 }
